--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
         format_sql: true
         show_sql: true
         default_batch_fetch_size: 1000
+    open-in-view: false
 
   security:
     oauth2:
