--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
       enabled: true
 
 logging:
-#  config: classpath:logback-spring.xml
+  config: classpath:logback-spring.xml
   level:
     org:
       hibernate:
